--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿alembic==1.7.6
+alembic==1.7.6
 anyio==3.5.0
 appdirs==1.4.4
 argh==0.26.2
@@ -110,7 +110,6 @@ pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2021.3
 PyWavelets==1.2.0
-pywinpty==2.0.2
 PyYAML==5.4.1
 pyzmq==20.0.0
 QDarkStyle==2.8.1
