--- a/requirements.txt
+++ b/requirements.txt
@@ -85,6 +85,11 @@ nltk==3.7
 notebook==6.4.8
 numba==0.55.1
 numpy==1.19.5
+numpy>=1.7.1
+numpy>=1.15.0
+numpy>=1.10.4
+numpy>=1.9.2
+numpy>=1.20.0
 oauthlib==3.2.0
 packaging==21.3
 pandas==1.2.4
