--- a/requirements.txt
+++ b/requirements.txt
@@ -84,10 +84,10 @@ networkx==2.6.3
 nltk==3.7
 notebook==6.4.8
 numba==0.55.1
-numpy>=1.20.0
+numpy==1.19.5
 oauthlib==3.2.0
 packaging==21.3
-pandas==1.2.4
+pandas==1.4.1
 pandocfilters==1.5.0
 parso==0.8.3
 pathspec==0.9.0
@@ -110,6 +110,8 @@ pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2021.3
 PyWavelets==1.2.0
+pywin32==227
+pywinpty==2.0.2
 PyYAML==5.4.1
 pyzmq==20.0.0
 QDarkStyle==2.8.1
@@ -168,6 +170,7 @@ widgetsnbextension==3.5.1
 win-unicode-console==0.5
 wincertstore==0.2
 wrapt==1.12.1
+xlwings==0.23.0
 xlwt==1.3.0
 xmltodict==0.12.0
 yellowbrick==1.3.post1
