--- a/requirements.txt
+++ b/requirements.txt
@@ -83,7 +83,7 @@ kmodes==0.11.1
 lightgbm==3.3.2
 llvmlite==0.38.0
 Mako==1.1.6
-MarkupSafe==2.1.0
+MarkupSafe>0.9.2
 matplotlib==3.5.1
 matplotlib-inline==0.1.3
 missingno==0.5.0
